# sound-event-localization-detection

sound_bring_up/: CMakeLists.txt  package.xml
sound_bring_up/config/: common.yaml  global_2D_3mics.yaml  global_2D_4mics.yaml  global_2D_4mics_16src.yaml  global_2D_4mics_4src.yaml  global_3D_4mics.yaml  global_3D_4mics_16src.yaml  global_3D_4mics_4src.yaml  global_3D_4mics_8src.yaml
sound_bring_up/launch/: common.sound_structure.launch  test.sound_structure_4mics_load.launch  test.sound_structure_4mics_load_raw.launch  test.sound_structure_4mics_real.launch  test.sound_structure_4mics_save.launch  test.sound_structure_4mics_save_raw.launch  test.sound_structure_4mics_simul.launch
sound_bring_up/mesh/: chassis_base.0.dae  topbox.0.dae
sound_bring_up/rviz/: test.sound_structure.rviz
sound_classifier/: CMakeLists.txt  checkpoint  package.xml  setup.py
sound_classifier/launch/: node.sound_classifier.launch  (+1 more)
sound_loader/: CMakeLists.txt  package.xml  setup.py
sound_locator/: CMakeLists.txt  package.xml  setup.py
sound_locator/launch/: node.sound_locator.launch  test.sound_locator.launch
sound_locator/scripts/: sound_locator.py  sound_locator_node.py
sound_msgs/: CMakeLists.txt  package.xml
sound_msgs/action/: Classifier.action
sound_msgs/msg/: SoundFrame.msg  SoundFrameArray.msg  SoundPoint.msg  SoundSample.msg  SoundSampleArray.msg
sound_receiver/: CMakeLists.txt  package.xml  setup.py
sound_saver/: CMakeLists.txt  package.xml  setup.py
sound_spec/: CMakeLists.txt  package.xml  setup.py
sound_utils/: CMakeLists.txt  package.xml  setup.py
(+46 files in other folders)
